methods.basics.Methods.scala.error
Compilation error:
Methods:8: error: not found: value i
  for (i <- i to pas) {
            ^