methods.basics.Methods.scala.code
def goAndGet() {
  var pas:Int=0;
  while (!isOverBaggle()) {
    forward();
    pas=pas+1
  }
  pickupBaggle();
  for (i <- i to pas) {
    backward();
  }
}

for (i <- 1 to 7) {
    goAndGet();
    right();
    forward();
    left();
}